Fixed the #tabContainer being 1% out of place

--- a/less/stylesheets/sections/navbar.less
+++ b/less/stylesheets/sections/navbar.less
@@ -55,7 +55,7 @@
 #tabContainer {
   position: absolute;
   left: @sidebar-width;
-  width: calc(~"99% - "@sidebar-width);
+  width: calc(~"100% - "@sidebar-width);
   border-left: 1px solid @background-dark;
   height: 94vh;
   top: 47px;
